--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,14 +66,29 @@
                     android:textColor="?android:attr/textColorSecondary" />
 
 
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/create"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:text="Create Alarm"
-                    app:icon=""></com.google.android.material.button.MaterialButton>
+                    android:backgroundTint="@color/BLUE"
+                    app:icon="@drawable/baseline_add_alarm_24"></com.google.android.material.button.MaterialButton>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Cancel Alarm"
+                    app:icon="@drawable/baseline_alarm_off_24"
+                    android:background="#00FFFFFF"
+                    android:textColor="@color/BLUE"
+                    app:iconTint="@color/BLUE"></com.google.android.material.button.MaterialButton>
+</LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
