--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FFDD8DB8</color>
-    <color name="BLUE">#FF84ADFF</color>
+    <color name="blue">#FF84ADFF</color>
 </resources>
