--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         android:layout_width="match_parent"
@@ -32,11 +31,11 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/animation"
                 android:layout_width="match_parent"
                 android:layout_height="194dp"
                 android:scaleType="fitXY"
-                 />
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,7 +46,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Create Alarm Time" />
+                    android:text="Create Alarm Time"
+                    android:textAppearance="?attr/textAppearanceHeadline6" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -64,32 +64,41 @@
                     android:text="Check current time by looking below real digital clock."
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary" />
-
-
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/create"
+                <ImageView
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="25dp"
+                    android:id="@+id/heart"
+                    android:scaleType="fitXY"
+                    android:layout_gravity="right"/>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:text="Create Alarm"
-                    android:backgroundTint="@color/BLUE"
-                    app:icon="@drawable/baseline_add_alarm_24"></com.google.android.material.button.MaterialButton>
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:text="Cancel Alarm"
-                    app:icon="@drawable/baseline_alarm_off_24"
-                    android:background="#00FFFFFF"
-                    android:textColor="@color/BLUE"
-                    app:iconTint="@color/BLUE"></com.google.android.material.button.MaterialButton>
-</LinearLayout>
+                    android:orientation="horizontal">
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/create"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="Create Alarm"
+                        android:backgroundTint="@color/blue"
+                        app:icon="@drawable/baseline_add_alarm_24"></com.google.android.material.button.MaterialButton>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/cancel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="Cancel Alarm"
+                        android:backgroundTint="@color/blue"
+
+                        app:icon="@drawable/baseline_alarm_off_24">
+
+                    </com.google.android.material.button.MaterialButton>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
